deploy-b.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-service-b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-service-b
  template:
    metadata:
      labels:
        app: test-service-b
    spec:
      containers:
        - name: test-service-b
          image: dockerhub.gtidev.net/airplus/test-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: app-config
              mountPath: /config/application.yaml
              subPath: application.yaml
      volumes:
        - name: app-config
          configMap:
            name: test-service-b-config
