deploy-a.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-service-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-service-a
  template:
    metadata:
      labels:
        app: test-service-a
    spec:
      containers:
        - name: test-service-a
          image: dockerhub.gtidev.net/airplus/test-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: app-config
              mountPath: /config/application.yaml
              subPath: application.yaml
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
      volumes:
        - name: app-config
          configMap:
            name: test-service-a-config
---
apiVersion: v1
kind: Service
metadata:
  name: test-service-a
spec:
  selector:
    app: test-service-a
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: test-service-a
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`test-service-a.dev.gtidev.net`)
      kind: Rule
      services:
        - name: test-service-a
          port: 8080
  tls:
    secretName: test-service-a-tls
