deploy-mini-a.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-service-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-service-a
  template:
    metadata:
      labels:
        app: test-service-a
    spec:
      containers:
        - name: test-service-a
          image: test-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: app-config
              mountPath: /config/application.yaml
              subPath: application.yaml
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Gi"
              cpu: "500m"
      volumes:
        - name: app-config
          configMap:
            name: test-service-a-config
---
apiVersion: v1
kind: Service
metadata:
  name: test-service-a
spec:
  selector:
    app: test-service-a
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: test-service-a
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`localhost`) && PathPrefix(`/service-a`)
      kind: Rule
      services:
        - name: test-service-a
          port: 8080
